# fund-ranking-system

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: env.production.example
deploy/nginx/: fund-ranking.conf  fund-ranking.no-auth.conf
docs/: aliyun_hk_deployment.md  demo_guide.md  deployment_checklist.md  local_deployment.md  project_report.md
docs/sample_outputs/: README.md  analysis_data.xlsx  analysis_reports.docx
scripts/: deploy_hk_lightweight.sh  run_web.sh  start_web.sh  stop_web.sh
src/fund_ranking_system/: __init__.py  adaptive_weights.py  advisory.py  akshare_data.py  benchmark.py  chart_style.py  cli.py  data.py  data_quality.py  diagnostics.py  explainability.py  explanation_visuals.py  friendly_exports.py  fund_universe.py  lime_explainability.py  metadata.py  ml_scoring.py  model_evaluation.py  pipeline.py  portfolio.py  portfolio_backtest.py  report.py  research.py  scoring.py  sensitivity.py  storage.py  strategy_benchmark.py  time_utils.py  validation.py  visualization.py  web.py
tests/: test_adaptive_weights.py  test_advisory.py  test_akshare_data.py  test_data.py  test_friendly_exports.py  test_lime_explainability.py  test_metadata.py  test_ml_scoring.py  test_portfolio.py  test_product_readiness.py  test_research.py  test_research_validation.py  test_storage.py  test_time_utils.py  test_version.py  test_web.py
