[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-ranking-system"
version = "0.2.1"
description = "Risk-return multi-factor ranking system for mutual funds."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "akshare>=1.16",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
fund-ranking = "fund_ranking_system.cli:main"
fund-ranking-web = "fund_ranking_system.web:main"

[tool.setuptools.packages.find]
where = ["src"]
